simplify main with java 21 with static main