@@ -5,3 +5,10 @@ $ sdk use java 21.ea.35-open
 $ java --version
 $ java --enable-preview --source 21 SimplifyMain.Java
 ```
+
+with static main
+```shell
+$ sdk use java 21.ea.35-open
+$ java --version
+$ java --enable-preview --source 21 SimplifyMainStatic.Java
+```
